--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,3 +1,26 @@
+{% extends 'store/main.html' %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
-<h3>Store</h3>
+
+{% block content %}
+<div class="row">
+    <div class="col-lg-4">
+        <img src="{% static 'images/placeholder.png' %}" alt="">
+        <div class="box-element product">
+
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <img src="{% static 'images/placeholder.png' %}" alt="">
+        <div class="box-element product">
+            
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <img src="{% static 'images/placeholder.png' %}" alt="">
+        <div class="box-element product">
+            
+        </div>
+    </div>
+</div>
+{% endblock %}
